--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Lorem Ipsum</title>
+    <title>Fancy Ipsum</title>
 
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
