Fixed issue with generate button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <article class="lorem-text"></article>
 
-      <button type="btn" class="btn" id="copy">copy</button>
+      <button type="button" class="btn" id="copy">copy</button>
 
 
 
